# pygbm

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
gbmenv/: pyvenv.cfg
pygbm/: __init__.py  base_pygbm.py  cli.py  version.py
pygbm/gbm_simulator/: __init__.py  gbm_simulator.py
