[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pygbm"
dynamic = ["version"]
description = "A Python package for simulating Geometric Brownian Motion."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Randa He", email = "jh2604@cam.ac.uk" }
]
keywords = ["Geometric Brownian Motion", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "argparse",
    "datetime",
    "importlib.resources"
]

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/randa1029/pygbm.git"
"Issues" = "https://github.com/randa1029/pygbm.git/issues"


[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version
local_scheme = "no-local-version"
version_scheme = "post-release"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pygbm" = ["data/*"]


[project.scripts]
pygbm = "pygbm.cli:main"